--- a/deploy/production/Caddyfile
+++ b/deploy/production/Caddyfile
@@ -11,7 +11,7 @@
 
     encode zstd gzip
 
-    reverse_proxy budget:8000 {
+    reverse_proxy piggy-pulse-api:8000 {
         health_uri /api/v1/health
         health_interval 30s
         health_timeout 5s
