--- a/.drone.yml
+++ b/.drone.yml
@@ -36,9 +36,9 @@ steps:
       - apk add --no-cache docker-cli-compose
       - docker compose version
       - echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
-      - cd /app/budget
-      - docker compose pull budget cron
-      - docker compose up -d budget cron
+      - cd /app/piggy-pulse
+      - docker compose pull piggy-pulse cron
+      - docker compose up -d piggy-pulse cron
       - docker image prune -af
       - echo "✅ Deployed version ${DRONE_COMMIT_SHA:0:7}"
 
