--- a/.env.example
+++ b/.env.example
@@ -1,38 +1,38 @@
-# Environment variables for Budget API
+# Environment variables for PiggyPulse API
 #
 # Copy this to .env for local development
-# These take precedence over Budget.toml
+# These take precedence over PiggyPulse.toml
 
 # Database (required)
-DATABASE_URL=postgres://postgres:example@localhost:5432/budget_db
+DATABASE_URL=postgres://postgres:example@localhost:5432/piggy_pulse_db
 
 # Or use the prefixed format:
-# BUDGET_DATABASE_URL=postgres://postgres:example@localhost:5432/budget_db
-# BUDGET_DATABASE_MAX_CONNECTIONS=16
-# BUDGET_DATABASE_MIN_CONNECTIONS=4
-# BUDGET_DATABASE_CONNECTION_TIMEOUT=5
-# BUDGET_DATABASE_ACQUIRE_TIMEOUT=5
+# PIGGY_PULSE_DATABASE_URL=postgres://postgres:example@localhost:5432/piggy_pulse_db
+# PIGGY_PULSE_DATABASE_MAX_CONNECTIONS=16
+# PIGGY_PULSE_DATABASE_MIN_CONNECTIONS=4
+# PIGGY_PULSE_DATABASE_CONNECTION_TIMEOUT=5
+# PIGGY_PULSE_DATABASE_ACQUIRE_TIMEOUT=5
 
 # Server
-# BUDGET_SERVER_PORT=8000
-# BUDGET_SERVER_ADDRESS=127.0.0.1
+# PIGGY_PULSE_SERVER_PORT=8000
+# PIGGY_PULSE_SERVER_ADDRESS=127.0.0.1
 
 # API / Docs
-# BUDGET_API__BASE_PATH=/api/v1
-# BUDGET_API__EXPOSE_DOCS=false
+# PIGGY_PULSE_API__BASE_PATH=/api/v1
+# PIGGY_PULSE_API__EXPOSE_DOCS=false
 
 # CORS
-# BUDGET_CORS__ALLOWED_ORIGINS=["https://app.example.com"]
-# BUDGET_CORS__ALLOW_CREDENTIALS=true
+# PIGGY_PULSE_CORS__ALLOWED_ORIGINS=["https://app.example.com"]
+# PIGGY_PULSE_CORS__ALLOW_CREDENTIALS=true
 
 # Rate limiting (proxy-aware option)
-# BUDGET_RATE_LIMIT__USE_FORWARDED_IP=true
-# BUDGET_RATE_LIMIT__FORWARDED_IP_HEADER=x-forwarded-for
-# BUDGET_SESSION__COOKIE_SECURE=false
+# PIGGY_PULSE_RATE_LIMIT__USE_FORWARDED_IP=true
+# PIGGY_PULSE_RATE_LIMIT__FORWARDED_IP_HEADER=x-forwarded-for
+# PIGGY_PULSE_SESSION__COOKIE_SECURE=false
 
 # Logging
-# BUDGET_LOGGING_LEVEL=info
-# BUDGET_LOGGING_JSON_FORMAT=false
+# PIGGY_PULSE_LOGGING_LEVEL=info
+# PIGGY_PULSE_LOGGING_JSON_FORMAT=false
 
 # Rocket (required in non-debug profiles; optional for local debug)
 # Generate with: openssl rand -base64 32
