--- a/deploy/production/.env.example
+++ b/deploy/production/.env.example
@@ -4,19 +4,19 @@ CADDY_ACME_EMAIL=security@piggy-pulse.com
 CADDY_LOG_LEVEL=INFO
 
 # Immutable GHCR image references (prefer digests from CI artifact)
-BUDGET_API_IMAGE=ghcr.io/leocalm/budget-api@sha256:replace-with-api-digest
-BUDGET_CRON_IMAGE=ghcr.io/leocalm/budget-cron@sha256:replace-with-cron-digest
-BUDGET_IMAGE_PLATFORM=linux/amd64
+PIGGY_PULSE_API_IMAGE=ghcr.io/leocalm/piggy-pulse-api@sha256:replace-with-api-digest
+PIGGY_PULSE_CRON_IMAGE=ghcr.io/leocalm/piggy-pulse-cron@sha256:replace-with-cron-digest
+PIGGY_PULSE_IMAGE_PLATFORM=linux/amd64
 
 # Database
-POSTGRES_DB=budget_db
+POSTGRES_DB=piggy_pulse_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=replace-with-strong-password
 POSTGRES_PASSWORD_URLENC=replace-with-url-encoded-postgres-password
-BUDGET_DATABASE_MAX_CONNECTIONS=16
-BUDGET_DATABASE_MIN_CONNECTIONS=4
-BUDGET_DATABASE_CONNECTION_TIMEOUT=5
-BUDGET_DATABASE_ACQUIRE_TIMEOUT=5
+PIGGY_PULSE_DATABASE_MAX_CONNECTIONS=16
+PIGGY_PULSE_DATABASE_MIN_CONNECTIONS=4
+PIGGY_PULSE_DATABASE_CONNECTION_TIMEOUT=5
+PIGGY_PULSE_DATABASE_ACQUIRE_TIMEOUT=5
 
 # Redis
 REDIS_PASSWORD=replace-with-strong-redis-password
@@ -24,23 +24,23 @@ REDIS_PASSWORD_URLENC=replace-with-url-encoded-redis-password
 
 # API security
 ROCKET_SECRET_KEY=replace-with-openssl-rand-base64-32
-BUDGET_API_EXPOSE_DOCS=false
-BUDGET_CORS_ALLOWED_ORIGINS=["https://piggy-pulse.com"]
-BUDGET_CORS_ALLOW_CREDENTIALS=true
-BUDGET_LOGGING_LEVEL=info
-BUDGET_LOGGING_JSON_FORMAT=true
+PIGGY_PULSE_API_EXPOSE_DOCS=false
+PIGGY_PULSE_CORS_ALLOWED_ORIGINS=["https://piggy-pulse.com"]
+PIGGY_PULSE_CORS_ALLOW_CREDENTIALS=true
+PIGGY_PULSE_LOGGING_LEVEL=info
+PIGGY_PULSE_LOGGING_JSON_FORMAT=true
 
 # Cron
 CRON_SCHEDULE=*/15 * * * *
 
 # Email
-BUDGET_EMAIL_ENABLED=true
-BUDGET_EMAIL_SMTP_HOST=smtp.example.com
-BUDGET_EMAIL_SMTP_PORT=587
-BUDGET_EMAIL_SMTP_USERNAME=replace-with-smtp-user
-BUDGET_EMAIL_SMTP_PASSWORD=replace-with-smtp-password
-BUDGET_EMAIL_FROM_ADDRESS=noreply@piggy-pulse.com
-BUDGET_EMAIL_FROM_NAME=PiggyPulse
+PIGGY_PULSE_EMAIL_ENABLED=true
+PIGGY_PULSE_EMAIL_SMTP_HOST=smtp.example.com
+PIGGY_PULSE_EMAIL_SMTP_PORT=587
+PIGGY_PULSE_EMAIL_SMTP_USERNAME=replace-with-smtp-user
+PIGGY_PULSE_EMAIL_SMTP_PASSWORD=replace-with-smtp-password
+PIGGY_PULSE_EMAIL_FROM_ADDRESS=noreply@piggy-pulse.com
+PIGGY_PULSE_EMAIL_FROM_NAME=PiggyPulse
 
 # Frontend reset URL
-BUDGET_PASSWORD_RESET_FRONTEND_RESET_URL=https://piggy-pulse.com/reset-password
+PIGGY_PULSE_PASSWORD_RESET_FRONTEND_RESET_URL=https://piggy-pulse.com/reset-password
