--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-# Docker Compose configuration for Budget API
+# Docker Compose configuration for PiggyPulse API
 # All configuration values are loaded from .env file
 
 services:
@@ -9,23 +9,23 @@ services:
     restart: unless-stopped
     shm_size: ${POSTGRES_SHM_SIZE:-128mb}
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-budget_db}
+      POSTGRES_DB: ${POSTGRES_DB:-piggy_pulse_db}
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-budget_db}" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-piggy_pulse_db}" ]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
-      - budget_network
+      - piggy_pulse_network
     ports:
       - "5432:5432"
 
-  # Budget API application
-  budget:
+  # PiggyPulse API application
+  piggy-pulse:
     image: ghcr.io/leocalm/piggypulse-api:latest
     restart: unless-stopped
     depends_on:
@@ -33,52 +33,52 @@ services:
         condition: service_healthy
     environment:
       # Database configuration
-      DATABASE_URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-budget_db}
-      BUDGET_DATABASE__URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-budget_db}
-      BUDGET_DATABASE__MAX_CONNECTIONS: ${BUDGET_DATABASE_MAX_CONNECTIONS:-16}
-      BUDGET_DATABASE__MIN_CONNECTIONS: ${BUDGET_DATABASE_MIN_CONNECTIONS:-4}
-      BUDGET_DATABASE__CONNECTION_TIMEOUT: ${BUDGET_DATABASE_CONNECTION_TIMEOUT:-5}
-      BUDGET_DATABASE__ACQUIRE_TIMEOUT: ${BUDGET_DATABASE_ACQUIRE_TIMEOUT:-5}
+      DATABASE_URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-piggy_pulse_db}
+      PIGGY_PULSE_DATABASE__URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-piggy_pulse_db}
+      PIGGY_PULSE_DATABASE__MAX_CONNECTIONS: ${PIGGY_PULSE_DATABASE_MAX_CONNECTIONS:-16}
+      PIGGY_PULSE_DATABASE__MIN_CONNECTIONS: ${PIGGY_PULSE_DATABASE_MIN_CONNECTIONS:-4}
+      PIGGY_PULSE_DATABASE__CONNECTION_TIMEOUT: ${PIGGY_PULSE_DATABASE_CONNECTION_TIMEOUT:-5}
+      PIGGY_PULSE_DATABASE__ACQUIRE_TIMEOUT: ${PIGGY_PULSE_DATABASE_ACQUIRE_TIMEOUT:-5}
 
       # Server configuration
-      BUDGET_SERVER__PORT: ${BUDGET_SERVER_PORT:-8000}
-      BUDGET_SERVER__ADDRESS: ${BUDGET_SERVER_ADDRESS:-0.0.0.0}
-      ROCKET_PORT: ${BUDGET_SERVER_PORT:-8000}
-      ROCKET_ADDRESS: ${BUDGET_SERVER_ADDRESS:-0.0.0.0}
+      PIGGY_PULSE_SERVER__PORT: ${PIGGY_PULSE_SERVER_PORT:-8000}
+      PIGGY_PULSE_SERVER__ADDRESS: ${PIGGY_PULSE_SERVER_ADDRESS:-0.0.0.0}
+      ROCKET_PORT: ${PIGGY_PULSE_SERVER_PORT:-8000}
+      ROCKET_ADDRESS: ${PIGGY_PULSE_SERVER_ADDRESS:-0.0.0.0}
 
       # API configuration
-      BUDGET_API__BASE_PATH: ${BUDGET_API_BASE_PATH:-/api/v1}
-      BUDGET_API__EXPOSE_DOCS: ${BUDGET_API_EXPOSE_DOCS:-false}
+      PIGGY_PULSE_API__BASE_PATH: ${PIGGY_PULSE_API_BASE_PATH:-/api/v1}
+      PIGGY_PULSE_API__EXPOSE_DOCS: ${PIGGY_PULSE_API_EXPOSE_DOCS:-false}
 
       # CORS configuration
-      BUDGET_CORS__ALLOWED_ORIGINS: ${BUDGET_CORS_ALLOWED_ORIGINS:-[]}
-      BUDGET_CORS__ALLOW_CREDENTIALS: ${BUDGET_CORS_ALLOW_CREDENTIALS:-false}
+      PIGGY_PULSE_CORS__ALLOWED_ORIGINS: ${PIGGY_PULSE_CORS_ALLOWED_ORIGINS:-[]}
+      PIGGY_PULSE_CORS__ALLOW_CREDENTIALS: ${PIGGY_PULSE_CORS_ALLOW_CREDENTIALS:-false}
 
       # Rate limiting
-      BUDGET_RATE_LIMIT__USE_FORWARDED_IP: ${BUDGET_RATE_LIMIT_USE_FORWARDED_IP:-true}
-      BUDGET_RATE_LIMIT__FORWARDED_IP_HEADER: ${BUDGET_RATE_LIMIT_FORWARDED_IP_HEADER:-x-forwarded-for}
+      PIGGY_PULSE_RATE_LIMIT__USE_FORWARDED_IP: ${PIGGY_PULSE_RATE_LIMIT_USE_FORWARDED_IP:-true}
+      PIGGY_PULSE_RATE_LIMIT__FORWARDED_IP_HEADER: ${PIGGY_PULSE_RATE_LIMIT_FORWARDED_IP_HEADER:-x-forwarded-for}
 
       # Logging
-      BUDGET_LOGGING__LEVEL: ${BUDGET_LOGGING_LEVEL:-info}
-      BUDGET_LOGGING__JSON_FORMAT: ${BUDGET_LOGGING_JSON_FORMAT:-false}
+      PIGGY_PULSE_LOGGING__LEVEL: ${PIGGY_PULSE_LOGGING_LEVEL:-info}
+      PIGGY_PULSE_LOGGING__JSON_FORMAT: ${PIGGY_PULSE_LOGGING_JSON_FORMAT:-false}
 
       # Rocket secret key (required for production)
       ROCKET_SECRET_KEY: ${ROCKET_SECRET_KEY:?ROCKET_SECRET_KEY is required}
     healthcheck:
-      test: [ "CMD-SHELL", "curl -f http://localhost:${BUDGET_SERVER_PORT:-8000}${BUDGET_API_BASE_PATH:-/api/v1}/health || exit 1" ]
+      test: [ "CMD-SHELL", "curl -f http://localhost:${PIGGY_PULSE_SERVER_PORT:-8000}${PIGGY_PULSE_API_BASE_PATH:-/api/v1}/health || exit 1" ]
       interval: 30s
       timeout: 5s
       retries: 3
       start_period: 40s
     networks:
-      - budget_network
+      - piggy_pulse_network
 
   # Caddy reverse proxy
   caddy:
     image: caddy:${CADDY_VERSION:-2-alpine}
     restart: unless-stopped
     depends_on:
-      budget:
+      piggy-pulse:
         condition: service_healthy
     ports:
       - "${CADDY_HTTP_PORT:-80}:80"
@@ -92,26 +92,26 @@ services:
       - caddy_data:/data
       - caddy_config:/config
     networks:
-      - budget_network
+      - piggy_pulse_network
 
   # Cron worker for automatic period generation
   cron:
     image: ghcr.io/leocalm/piggypulse-cron:latest
     restart: unless-stopped
     depends_on:
-      budget:
+      piggy-pulse:
         condition: service_healthy
     environment:
       CRON_SCHEDULE: "${CRON_SCHEDULE:-*/15 * * * *}"
-      BUDGET_DATABASE__URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-budget_db}
-      BUDGET_DATABASE__MAX_CONNECTIONS: ${BUDGET_DATABASE_MAX_CONNECTIONS:-16}
-      BUDGET_DATABASE__MIN_CONNECTIONS: ${BUDGET_DATABASE_MIN_CONNECTIONS:-4}
-      BUDGET_DATABASE__CONNECTION_TIMEOUT: ${BUDGET_DATABASE_CONNECTION_TIMEOUT:-5}
-      BUDGET_DATABASE__ACQUIRE_TIMEOUT: ${BUDGET_DATABASE_ACQUIRE_TIMEOUT:-5}
-      BUDGET_LOGGING__LEVEL: ${BUDGET_LOGGING_LEVEL:-info}
-      BUDGET_LOGGING__JSON_FORMAT: ${BUDGET_LOGGING_JSON_FORMAT:-false}
+      PIGGY_PULSE_DATABASE__URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-piggy_pulse_db}
+      PIGGY_PULSE_DATABASE__MAX_CONNECTIONS: ${PIGGY_PULSE_DATABASE_MAX_CONNECTIONS:-16}
+      PIGGY_PULSE_DATABASE__MIN_CONNECTIONS: ${PIGGY_PULSE_DATABASE_MIN_CONNECTIONS:-4}
+      PIGGY_PULSE_DATABASE__CONNECTION_TIMEOUT: ${PIGGY_PULSE_DATABASE_CONNECTION_TIMEOUT:-5}
+      PIGGY_PULSE_DATABASE__ACQUIRE_TIMEOUT: ${PIGGY_PULSE_DATABASE_ACQUIRE_TIMEOUT:-5}
+      PIGGY_PULSE_LOGGING__LEVEL: ${PIGGY_PULSE_LOGGING_LEVEL:-info}
+      PIGGY_PULSE_LOGGING__JSON_FORMAT: ${PIGGY_PULSE_LOGGING_JSON_FORMAT:-false}
     networks:
-      - budget_network
+      - piggy_pulse_network
 
   # Drone CI Server
   drone-server:
@@ -133,7 +133,7 @@ services:
       DRONE_DATABASE_DATASOURCE: /data/database.sqlite
       DRONE_LOGS_DEBUG: "false"
     networks:
-      - budget_network
+      - piggy_pulse_network
 
   # Drone CI Runner
   drone-runner:
@@ -153,11 +153,11 @@ services:
       DRONE_MEMORY_LIMIT: 3221225472        # 3GB (increased from 1GB)
       DRONE_MEMORY_SWAP_LIMIT: 6442450944   # 6GB swap (increased from 2GB)
     networks:
-      - budget_network
+      - piggy_pulse_network
 
 
 networks:
-  budget_network:
+  piggy_pulse_network:
     driver: bridge
 
 volumes:
