--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "sync", "ti
 dotenvy = "0.15"
 uuid = { version = "1", features = ["serde", "v4"] }
 chrono = { version = "0.4", features = ["serde", "clock"] }
+chrono-tz = "0.10"
 password-hash = "0.5"
 argon2 = "0.5"
 tracing = "0.1"
